<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="16dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/gotham_rounded_bold"
                android:text="@string/method"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_edit_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/gotham_rounded_bold"
                android:text="@string/Desc"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edt_description"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_edit_text"
                android:fontFamily="@font/gotham_rounded_bold"
                android:hint="@string/enter_description"
                android:inputType="textCapSentences"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/gotham_rounded_bold"
                android:text="@string/amt"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edt_amount"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/bg_edit_text"
                android:fontFamily="@font/gotham_rounded_bold"
                android:hint="@string/demo_amt"
                android:inputType="numberDecimal"
                android:maxLength="10"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textColor="@color/black"
                android:textSize="14sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_cancel"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    app:cornerRadius="12dp"
                    android:backgroundTint="@color/view_color"
                    android:fontFamily="@font/gotham_rounded_bold"
                    android:text="@string/cancel"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_add"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    app:cornerRadius="12dp"
                    android:backgroundTint="@color/first_color"
                    android:fontFamily="@font/gotham_rounded_bold"
                    android:text="@string/add"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="16sp" />


            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>