<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    
    <data>
        
        <variable
            name="login"
            type="com.vk.uplogictask.activity.LoginActivity" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/wave_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="#4DB4FA"
            android:textSize="25sp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/gotham_rounded_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tiEmail"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:hint="@string/email"
            app:boxStrokeWidth="1dp"
            android:textSize="14sp"
            android:fontFamily="@font/gotham_rounded_light"
            android:textColorHint="#6D8B90"
            app:boxStrokeColor="@drawable/field_selector"
            app:endIconDrawable="@drawable/emai"
            app:endIconTint="@color/colorPrimary"
            app:endIconMode="custom"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:hintTextColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotham_rounded_medium"
                android:inputType="textEmailAddress"
                android:textColor="#3E5B5F"/>


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:hint="@string/pass"
            app:boxStrokeWidth="1dp"
            android:layout_marginTop="20dp"
            android:textSize="14sp"
            android:fontFamily="@font/gotham_rounded_light"
            android:textColorHint="#6D8B90"
            app:boxStrokeColor="@drawable/field_selector"
            app:endIconTint="@color/colorPrimary"
            app:endIconMode="password_toggle"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:hintTextColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tiEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotham_rounded_medium"
                android:inputType="textPassword"
                android:textColor="#3E5B5F"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:backgroundTint="#0A98FA"
            android:textAllCaps="true"
            android:fontFamily="@font/gotham_rounded_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tiPassword"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvsignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/signup"
            android:textColor="#4DB4FA"
            android:textAlignment="center"
            android:textSize="15sp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/gotham_rounded_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"/>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/wave_bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>
